Readme and License file updated

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "nehal-patel/first-package",
     "description": "This is just a demo package",
+    "license": "MIT",
     "authors": [
         {
             "name": "Nehal Patel",
